k8s/eagsmaster/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  name: eagsmaster-ingress
spec:
  rules:
  - host: eagsmaster.jimba.li
    http:
      paths:
      - backend:
          service:
            name: eagsmaster
            port:
              number: 3000
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - eagsmaster.jimba.li
    secretName: eagsmaster-tls
